feat: increase the speed of insert in bbdd